--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,4 +1,12 @@
 <html>
   <title>To-Do lists</title>
-  <h1>To-Do</h1>
+  <h1>Your To-Do List</h1>
+  <form method="POST">
+    <input name="item_text" id="id_new_item" placeholder="enter a to-do item" />
+    {% csrf_token %}
+  </form>
+
+  <table id="id_list_table">
+    <tr><td>1: {{ new_item_text }}</td></tr>
+  </table>
 </html>
